trybuild_tests/compile_fails/test_compile_fail.stderr
error: failed to read `BAD_SECRET` key from the environment, err = environment variable not found
 --> trybuild_tests/compile_fails/test_compile_fail.rs:9:30
  |
9 |     type A = tnconst![+ env!("BAD_SECRET");];
  |                              ^^^^^^^^^^^^

error: path cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:10:44
   |
10 |     type B = tnconst![+ env!("BAD_SECRET", "");];
   |                                            ^^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:11:43
   |
11 |     type C = tnconst![+ env!("BAD_SECRET",,);];
   |                                           ^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:12:30
   |
12 |     type D = tnconst![+ env!(,,"BAD_SECRET");];
   |                              ^

error: unexpected end of input, expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:13:34
   |
13 |     type E = tnconst![+ env!("", );];
   |                                  ^

error: key cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:14:30
   |
14 |     type F = tnconst![+ env!("", "");];
   |                              ^^

error: expected integer literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:15:23
   |
15 |     type G = tnconst![% env!("", "");];
   |                       ^

error: VarDoesNotExist("lame")
  --> trybuild_tests/compile_fails/test_compile_fail.rs:18:9
   |
18 |         lame;
   |         ^^^^

error: expressions should be evaluated to a negative integer, got `15` instead
  --> trybuild_tests/compile_fails/test_compile_fail.rs:23:9
   |
23 |         a + b
   |         ^

error: expressions should be evaluated to a positive integer, got `-5` instead
  --> trybuild_tests/compile_fails/test_compile_fail.rs:28:9
   |
28 |         a - b
   |         ^

error: expressions should be evaluated to a non-negative or positive integer, got `-5` instead
  --> trybuild_tests/compile_fails/test_compile_fail.rs:33:9
   |
33 |         a - b
   |         ^

error: failed to read `BAD_SECRET` key from the environment, err = environment variable not found
  --> trybuild_tests/compile_fails/test_compile_fail.rs:35:30
   |
35 |     type L = tnconst![- env!("BAD_SECRET");];
   |                              ^^^^^^^^^^^^

error: path cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:36:44
   |
36 |     type M = tnconst![- env!("BAD_SECRET", "");];
   |                                            ^^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:37:43
   |
37 |     type N = tnconst![- env!("BAD_SECRET",,);];
   |                                           ^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:38:30
   |
38 |     type O = tnconst![- env!(,,"BAD_SECRET");];
   |                              ^

error: unexpected end of input, expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:39:34
   |
39 |     type P = tnconst![- env!("", );];
   |                                  ^

error: key cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:40:30
   |
40 |     type Q = tnconst![- env!("", "");];
   |                              ^^

error: invocation of `env` macro does not return a negative integer literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:41:25
   |
41 |     type R = tnconst![- env!("ENV_VAR");];
   |                         ^^^

error: invocation of `env` macro does not return a positive integer literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:42:25
   |
42 |     type S = tnconst![+ env!("NENV_VAR");];
   |                         ^^^

error: invocation of `env` macro does not return a positive integer literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:43:24
   |
43 |     type T = tnconst![ env!("NENV_VAR");];
   |                        ^^^

error: currently only support `env` macro-like invocation, it currently does not support `ggenv`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:44:24
   |
44 |     type U = tnconst![ ggenv!("NENV_VAR");];
   |                        ^^^^^

error: failed to read `BAD_SECRET` key from the environment, err = environment variable not found
  --> trybuild_tests/compile_fails/test_compile_fail.rs:51:28
   |
51 |     type A = pconst![ env!("BAD_SECRET");];
   |                            ^^^^^^^^^^^^

error: path cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:52:42
   |
52 |     type B = pconst![ env!("BAD_SECRET", "");];
   |                                          ^^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:53:41
   |
53 |     type C = pconst![ env!("BAD_SECRET",,);];
   |                                         ^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:54:28
   |
54 |     type D = pconst![ env!(,,"BAD_SECRET");];
   |                            ^

error: unexpected end of input, expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:55:32
   |
55 |     type E = pconst![ env!("", );];
   |                                ^

error: key cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:56:28
   |
56 |     type F = pconst![ env!("", "");];
   |                            ^^

error: expected integer literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:57:22
   |
57 |     type G = pconst![% env!("", "");];
   |                      ^

error: expected `;`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:59:28
   |
59 |     type J = pconst![ 6969 {};];
   |                            ^

error: expected `;`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:60:28
   |
60 |     type K = pconst![ 6969 {}];
   |                            ^

error: VarDoesNotExist("lame")
  --> trybuild_tests/compile_fails/test_compile_fail.rs:63:9
   |
63 |         lame;
   |         ^^^^

error: when using `pconst`, the first character passed cannot be a `+`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:65:22
   |
65 |     type M = pconst![+ 69];
   |                      ^

error: when using `pconst`, the first character passed cannot be a `+`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:66:22
   |
66 |     type N = pconst![+ env!("ENV_VAR");];
   |                      ^

error: when using `pconst`, the first character passed cannot be a `+`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:67:22
   |
67 |     type O = pconst![+ {
   |                      ^

error: expressions should be evaluated to a positive integer, got `-5` instead
  --> trybuild_tests/compile_fails/test_compile_fail.rs:75:9
   |
75 |         a - b
   |         ^

error: failed to read `BAD_SECRET` key from the environment, err = environment variable not found
  --> trybuild_tests/compile_fails/test_compile_fail.rs:84:28
   |
84 |     type A = nconst![ env!("BAD_SECRET");];
   |                            ^^^^^^^^^^^^

error: path cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:85:42
   |
85 |     type B = nconst![ env!("BAD_SECRET", "");];
   |                                          ^^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:86:41
   |
86 |     type C = nconst![ env!("BAD_SECRET",,);];
   |                                         ^

error: expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:87:28
   |
87 |     type D = nconst![ env!(,,"BAD_SECRET");];
   |                            ^

error: unexpected end of input, expected string literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:88:32
   |
88 |     type E = nconst![ env!("", );];
   |                                ^

error: key cannot be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:89:28
   |
89 |     type F = nconst![ env!("", "");];
   |                            ^^

error: expected integer literal
  --> trybuild_tests/compile_fails/test_compile_fail.rs:90:22
   |
90 |     type G = nconst![% env!("", "");];
   |                      ^

error: expected `;`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:92:28
   |
92 |     type J = nconst![ 6969 {};];
   |                            ^

error: expected `;`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:93:28
   |
93 |     type K = nconst![ 6969 {}];
   |                            ^

error: VarDoesNotExist("lame")
  --> trybuild_tests/compile_fails/test_compile_fail.rs:96:9
   |
96 |         lame;
   |         ^^^^

error: unexpected end of input, the content within the block delimited by `{...}` must not be empty
  --> trybuild_tests/compile_fails/test_compile_fail.rs:98:23
   |
98 |     type M = nconst![{}];
   |                       ^

error: when using `nconst`, the first character passed cannot be a `-`
  --> trybuild_tests/compile_fails/test_compile_fail.rs:99:22
   |
99 |     type R = nconst![-69];
   |                      ^

error: when using `nconst`, the first character passed cannot be a `-`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:100:22
    |
100 |     type N = nconst![- env!("ENV_VAR");];
    |                      ^

error: when using `nconst`, the first character passed cannot be a `-`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:101:22
    |
101 |     type O = nconst![-{
    |                      ^

error: expressions should be evaluated to a negative integer, got `15` instead
   --> trybuild_tests/compile_fails/test_compile_fail.rs:109:9
    |
109 |         a + b
    |         ^

error: failed to read `BAD_SECRET` key from the environment, err = environment variable not found
   --> trybuild_tests/compile_fails/test_compile_fail.rs:118:28
    |
118 |     type A = uconst![ env!("BAD_SECRET");];
    |                            ^^^^^^^^^^^^

error: path cannot be empty
   --> trybuild_tests/compile_fails/test_compile_fail.rs:119:42
    |
119 |     type B = uconst![ env!("BAD_SECRET", "");];
    |                                          ^^

error: expected string literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:120:41
    |
120 |     type C = uconst![ env!("BAD_SECRET",,);];
    |                                         ^

error: expected string literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:121:28
    |
121 |     type D = uconst![ env!(,,"BAD_SECRET");];
    |                            ^

error: unexpected end of input, expected string literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:122:32
    |
122 |     type E = uconst![ env!("", );];
    |                                ^

error: key cannot be empty
   --> trybuild_tests/compile_fails/test_compile_fail.rs:123:28
    |
123 |     type F = uconst![ env!("", "");];
    |                            ^^

error: expected integer literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:124:22
    |
124 |     type G = uconst![% env!("", "");];
    |                      ^

error: expected `;`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:126:28
    |
126 |     type J = uconst![ 6969 {};];
    |                            ^

error: expected `;`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:127:28
    |
127 |     type K = uconst![ 6969 {}];
    |                            ^

error: VarDoesNotExist("lame")
   --> trybuild_tests/compile_fails/test_compile_fail.rs:130:9
    |
130 |         lame;
    |         ^^^^

error: unexpected token
   --> trybuild_tests/compile_fails/test_compile_fail.rs:134:38
    |
134 |     type O = uconst![env!("ENV_VAR");;];
    |                                      ^

error: expressions should be evaluated to a non-negative or positive integer, got `-6869` instead
   --> trybuild_tests/compile_fails/test_compile_fail.rs:136:9
    |
136 |         100 - 6969;
    |         ^^^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:138:22
    |
138 |     type R = uconst![-69];
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:139:22
    |
139 |     type S = uconst![- env!("ENV_VAR");];
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:140:22
    |
140 |     type T = uconst![-{
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:145:22
    |
145 |     type X = uconst![-{
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:150:22
    |
150 |     type U = uconst![+ 69];
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:151:22
    |
151 |     type V = uconst![+ env!("ENV_VAR");];
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:152:22
    |
152 |     type W = uconst![+ {
    |                      ^

error: when using `uconst`, the first character passed cannot be a `-` or a `+`
   --> trybuild_tests/compile_fails/test_compile_fail.rs:157:22
    |
157 |     type Y = uconst![+ {
    |                      ^

error: expressions should be evaluated to a negative integer, got `15` instead
   --> trybuild_tests/compile_fails/test_compile_fail.rs:180:9
    |
180 |         b + a; // Last statement is always the final returned value to be casted into `typenum` type-level integer, U15
    |         ^

error: invocation of `env` macro does not return a negative integer literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:196:22
    |
196 |     type D = nconst![env!("ENV_VAR");];
    |                      ^^^

error: invocation of `env` macro does not return a positive integer literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:212:22
    |
212 |     type D = pconst![env!("NENV_VAR");];
    |                      ^^^

error: invocation of `env` macro does not return a positive integer literal
   --> trybuild_tests/compile_fails/test_compile_fail.rs:228:22
    |
228 |     type D = uconst![env!("NENV_VAR");];
    |                      ^^^
